--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 每天好一点点
-subtitle: '今天会比昨天更好'
+title: 衡蕊蕊王八蛋
+subtitle: ''
 description: '前端菜鸟学习的记录'
 keywords:
 author: south
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://southlamp.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
