测试正则兼容性

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 衡蕊蕊王八蛋
+title: southlamp is King
 subtitle: ''
-description: '前端菜鸟学习的记录'
+description: '菜鸟记录'
 keywords:
 author: south
 language: zh-CN
