--- a/_config.yml
+++ b/_config.yml
@@ -46,10 +46,9 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: false
-  tab_replace: ''
-  wrap: true
-  hljs: false
+  auto_detect: true
+  hljs: true
+  tab_replace:
 prismjs:
   enable: false
   preprocess: true
@@ -62,7 +61,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 9
   order_by: -date
 
 # Category & Tag
@@ -97,7 +96,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: zhaoo
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
@@ -110,3 +109,6 @@ deploy:
 marked:
   prependRoot: true
   postAsset: true
+
+
+
