--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "prettier": "^2.2.1",
     "yorkie": "^2.0.0",
     "react": "^16.12.0"
+  },
+  "dependencies": {
+    "gitalk": "^1.8.0"
   }
 }
