--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "name": "dumi-app",
   "scripts": {
     "start": "dumi dev",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && dumi build",
+    "build": "dumi build",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\""
   },
   "main": "dist/index.js",
